# hai5016-project

./: campus_restaurant_websites.xlsx  first_agent.ipynb  main.py  pyproject.toml  scrape.py  testapi.py
.claude/: settings.local.json
.github/: copilot-instructions.md
results/: menus-2026-04-16.jsonl
