[project]
name = "hai5016-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
]
